# deprem-yardim-backend

./: .env.template  .gitignore  .isort.cfg  .pre-commit-config.yaml  README.en.md  README.md  development.yml  docker-compose.yml  manage.py  production.yml  pyproject.toml  task-definition-backend-prod2.json  task-definition-scr-prod.json  task-definition-scr.json  task-definition.json  tox.ini
.docker/api/: Dockerfile  start-django.sh
.docker/scraper/: Dockerfile  start-django.sh
.github/: pull_request_template.md
.github/workflows/: api-prod.yml  api-prod2.yml  docker-image.yml  prod.yml  scraper-prod-2.yml  scraper-prod.yml  test.yml
applications/core/: address_api.py  admin.py  apps.py  authentication.py  custom_exception_handler.py  db_routers.py  helpers.py  middleware.py  models.py  pagination.py  urls.py  views.py
applications/core/helpers/: address_evaluator.py  google_geocode_api.py  ner_api.py  regex_api.py  trendyol_bff.py
applications/feeds/: admin.py  apps.py  filters.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
applications/feeds/migrations/: 0001_initial.py  0002_alter_entry_channel.py  0003_alter_entry_extra_parameters.py  0004_entry_timestamp.py  0005_location.py  0006_alter_location_options_entry_is_geolocated_and_more.py  0007_alter_entry_location.py  0008_alter_entry_channel.py
applications/feeds/views/: areas.py  base.py  entries.py  locations.py
applications/instagram/: admin.py  apps.py  helpers.py  models.py  serializers.py  tasks.py
applications/instagram/migrations/: 0001_initial.py  0002_instagramposttofollow_alter_instagrampost_post_id_and_more.py
applications/taleps/: apps.py  models.py  serializers.py  tasks.py  urls.py  views.py
applications/tweets/: admin.py  apps.py  filters.py  helpers.py  models.py  regex.py  serializers.py  tasks.py  urls.py  views.py
applications/tweets/migrations/: 0001_initial.py  0002_alter_tweet_hashtags.py  0005_address_tel.py  (+10 more)
docker/: entrypoint.sh
docker/development/: Dockerfile  entrypoint.sh  start-django.sh
docker/production/: Dockerfile
openapi/: swagger.yaml
tests/: test_main.py
trquake/: asgi.py  celery.py  celery_service.py  urls.py  wsgi.py
trquake/settings/: base.py  development.py  production.py
(+5 files in other folders)
